<resources>
    <string name="app_name">Impossu Puzzle</string>
    <string name="start">Start</string>
    <string name="load">Load</string>
    <string name="select_diff">Select the difficulty</string>
    <string name="difficulty">Difficulty</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>
    <string name="please_sx_sy_one">Please set sx or sy to more than one!</string>
    <string name="ask_reset">Do you want to reset all your progress?</string>
    <string name="make_all_black">Make all fields black! Good luck!</string>
    <string name="allow_asymmetric_connections">Allow asymmetric connections</string>
    <string name="won_msg">You won!</string>
    <string name="no_saves">You don\'t have any saved games!</string>
    <string name="new_save">New</string>
    <string name="ask_delete">Do you want to delete this save?</string>
    <string name="name">Name:</string>
    <string name="ok">OK</string>
    <string name="have_to_enter_name">You have to enter a name!</string>
    <string name="save_success">Successfully saved!</string>
    <string name="this_riddle_at_this_difficulty_has_at_max">This riddle at this difficulty has at max</string>
    <string name="wrong_solutions_while_a_single">wrong states, while a single</string>
    <string name="is_the_right_one">is the right one.</string>
    <string name="width_">The field is</string>
    <string name="height_">wide,</string>
    <string name="difficulty_">high, and has a difficulty of</string>
    <string name="one">1</string>
    <string name="states_per_entity">There are</string>
    <string name="initial_swaps">possible states per entity.</string>
    <string name="initial_swaps2">The riddle was initialized with</string>
    <string name="swaps">swaps, so it is solvable in the same amount of steps.</string>
    <string name="too_many">too many</string>
    <string name="cancel">Cancel</string>
</resources>
