<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorPrimaryDark"
              android:padding="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/name"
                android:hint="@string/name"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:backgroundTint="@color/colorAccent"
                android:layout_centerInParent="true"
                android:textSize="25sp"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <Button
            android:id="@+id/okButton"
            android:text="@string/ok"
            android:textAlignment="center"
            android:background="@color/colorPrimary"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>