<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/colorPrimaryDark"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/title"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/titleText"
                    android:text="@string/won_msg"
                    android:textColor="#fff"
                    android:textAlignment="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:textSize="35sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <View
                    android:background="#fff"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"/>

        </LinearLayout>

        <Button
                android:id="@+id/loadButton"
                android:text="@string/load"
                android:textSize="25sp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <FrameLayout
                android:layout_margin="3dp"
                android:padding="1dp"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="vertical"
                    android:background="@color/colorPrimaryDark"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:layout_weight="1"
                            android:text="@string/columns"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_weight="1"
                            android:text="@string/rows"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_weight="1"
                            android:text="@string/difficulty"
                            android:textAlignment="center"
                            android:textColor="#fff"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                </LinearLayout>

                <LinearLayout
                        android:orientation="horizontal"
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <NumberPicker
                            android:id="@+id/sx"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">


                    </NumberPicker>

                    <NumberPicker
                            android:id="@+id/sy"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">


                    </NumberPicker>

                    <NumberPicker
                            android:id="@+id/difficulty"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content">


                    </NumberPicker>

                </LinearLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <CheckBox
                            android:id="@+id/allowAsymmetric"
                            android:text="@string/allow_asymmetric_connections"
                            android:layout_centerInParent="true"
                            android:checked="true"
                            android:textColor="#fff"
                            android:textSize="15sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </RelativeLayout>

            </LinearLayout>

        </FrameLayout>

        <Button
                android:id="@+id/start"
                android:text="@string/start"
                android:textSize="25sp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>