<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="5dp"
              android:background="@color/colorPrimaryDark"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/question"
            android:text="@string/app_name"
            android:padding="5dp"
            android:textAlignment="center"
            android:background="@color/colorAccent"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <LinearLayout
            android:orientation="horizontal"
            android:background="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/no"
                android:text="@string/cancel"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"/>

        <View
                android:layout_width="5dp"
                android:layout_height="1dp"/>

        <Button
                android:id="@+id/yes"
                android:text="@string/ok"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#fff"
                android:textSize="25sp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>